test/success/integration/_succ_type_func_2.hs
x :: Int -> Int
main = print "hello"