test/fail/integration/_fail_grammar_expr_uminus_1.hs
x :: Int
x = -jl
main = print "hello"